--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
         <!-- <img src="../static/css/images/internet-4463031__480.jpg" alt="" class="containers"> -->
     <main class="container">
         <br/><br/>
-        <!-- <img src="../static/css/images/internet-4463031__480.jpg" alt=""> -->
+        <!-- <img src="../static/css/images/572.png" alt="" width="90%" height="30%"> -->
       {% block content %}
       
       {% endblock content %}
