--- a/templates/ball.html
+++ b/templates/ball.html
@@ -28,7 +28,11 @@
         
         <a href="{{url_for('Sports')}}" class="button">Back To Blog</a>
         <br/><br/>
+        <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_comm')}}" class="button">Comment</a><br/><br/>
         
+        <small class="form-group">View comment?</small> <a href="{{url_for('Comm')}}" class="button">View Comment</a><br/><br/>
+        
+
 		
 
 {% endblock %}
