--- a/templates/dance.html
+++ b/templates/dance.html
@@ -27,7 +27,12 @@
         <a href="{{url_for('delete_music', id=dance.id)}}" class="buttons">Delete Post</a>
         
         
-        <a href="{{url_for('musics')}}" class="button">Back To Blog</a><br/><br/>
+        <a href="{{url_for('musics')}}" class="button">Back To Blog</a>
+        <br/><br/> 
+        <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_commen')}}" class="button">Comment</a><br/><br/>
+        
+        <small class="form-group">View comment?</small> <a href="{{url_for('Commen')}}" class="button">View Comment</a><br/><br/>
+        
         
 		
 
