--- a/templates/hands.html
+++ b/templates/hands.html
@@ -29,7 +29,11 @@
         
         <a href="{{url_for('Relationships')}}" class="button">Back To Blog</a> 
         <br/><br/>
+        <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_comme')}}" class="button">Comment</a><br/><br/>
         
+        <small class="form-group">View comment?</small> <a href="{{url_for('Comme')}}" class="button">View Comment</a><br/><br/>
+        
+
 		
 
 {% endblock %}
