--- a/templates/post.html
+++ b/templates/post.html
@@ -28,8 +28,9 @@
         
         <a href="{{url_for('posts')}}" class="button">Back To Blog</a>
         <br/><br/> 
-        <!-- <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_comment')}}" class="button">Comment</a><br/><br/> -->
+        <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_comment')}}" class="button">Comment</a><br/><br/>
         
-		
+        <small class="form-group">View comment?</small> <a href="{{url_for('Comments')}}" class="button">View Comment</a><br/><br/>
+        
 
 {% endblock %}
