--- a/templates/shoe.html
+++ b/templates/shoe.html
@@ -33,7 +33,7 @@
         {% endfor %}
         <br/><br/>
         {% if current_user.is_authenticated %}
-        <small class="form-group">Like to share a post in this segment?</small> <a href="{{url_for('add_post')}}" class="button">Post</a><br/><br/>
+        <small class="form-group">Like to share a post in this segment?</small> <a href="{{url_for('add_Lifestyle')}}" class="button">Post</a><br/><br/>
         {% else %}
         <!-- <small class="form-group">Like to share a post in this segment?</small> <a href="{{url_for('add_post')}}" class="button">Post</a><br/><br/> -->
         {% endif %}
