--- a/templates/cloth.html
+++ b/templates/cloth.html
@@ -29,7 +29,11 @@
         
         <a href="{{url_for('Lifestyles')}}" class="button">Back To Blog</a> 
         <br/><br/>
+        <small class="form-group">Like to share a comment?</small> <a href="{{url_for('add_com')}}" class="button">Comment</a><br/><br/>
         
+        <small class="form-group">View comment?</small> <a href="{{url_for('Com')}}" class="button">View Comment</a><br/><br/>
+        
+
 		
 
 {% endblock %}
